repair h2 spacing
ready for deployment more or less, just some slight tweaks required

--- a/src/LandingPage/LandingPage.css
+++ b/src/LandingPage/LandingPage.css
@@ -22,7 +22,7 @@ body {
 }
 
 .landingPageText{
-  margin-top: 35px;
+  margin-top: 60px;
 }
 
 #headerbanner {
@@ -110,7 +110,6 @@ body {
   flex-direction: column;
   background-color: #18191b;
 }
-
 
 @keyframes logo-spin {
   from {
